--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,7 @@
     "debug": "~2.0.0",
     "dotenv": "^0.5.1",
     "express": "~4.9.0",
+    "express-flash": "0.0.2",
     "express-session": "^1.10.2",
     "jade": "~1.6.0",
     "morgan": "~1.3.0",
