--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "express-flash": "0.0.2",
     "express-session": "^1.10.2",
     "jade": "~1.6.0",
+    "method-override": "^2.3.1",
     "morgan": "~1.3.0",
     "nodemon": "^1.3.7",
     "restler": "^3.2.2",
