--- a/client/bower.json
+++ b/client/bower.json
@@ -2,11 +2,11 @@
   "name": "roomies-web",
   "version": "1.0.0",
   "dependencies": {
-    "angular-latest": "~1.3.14",
     "underscore": "~1.8.2",
     "pure": "~0.6.0",
     "jquery": "~2.1.3",
     "normalize.css": "~3.0.2",
-    "animate.css": "~3.2.1"
+    "animate.css": "~3.2.1",
+    "angular": "~1.3.14"
   }
 }
