--- a/client/bower.json
+++ b/client/bower.json
@@ -3,10 +3,10 @@
   "version": "1.0.0",
   "dependencies": {
     "underscore": "~1.8.2",
-    "pure": "~0.6.0",
     "jquery": "~2.1.3",
     "normalize.css": "~3.0.2",
     "animate.css": "~3.2.1",
-    "angular": "~1.3.14"
+    "angular": "~1.3.14",
+    "bootstrap": "~3.3.2"
   }
 }
