--- a/client/bower.json
+++ b/client/bower.json
@@ -6,7 +6,7 @@
     "jquery": "~2.1.3",
     "normalize.css": "~3.0.2",
     "animate.css": "~3.2.1",
-    "angular": "~1.3.14",
-    "bootstrap": "~3.3.2"
+    "bootstrap": "~3.3.2",
+    "react": "~0.12.2"
   }
 }
