--- a/client/package.json
+++ b/client/package.json
@@ -19,6 +19,7 @@
     "method-override": "^2.3.1",
     "morgan": "~1.3.0",
     "nodemon": "^1.3.7",
+    "react-tools": "^0.13.1",
     "restler": "^3.2.2",
     "serve-favicon": "~2.1.3"
   }
