--- a/server/Gemfile
+++ b/server/Gemfile
@@ -1,5 +1,6 @@
 source 'https://rubygems.org'
 
+ruby '2.2.0'
 
 gem 'rails', '4.2.0'
 
@@ -14,6 +15,7 @@ gem 'pg'
 
 gem 'bcrypt', '~> 3.1.7'
 
+gem 'rails_12factor', group: :production
 
 group :development, :test do
   gem 'rspec-rails'
